WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24890
Navigation actions are not updated when browsing a site that uses frames.
https://bugs.webkit.org/show_bug.cgi?id=24890
Summary
Navigation actions are not updated when browsing a site that uses frames.
Benjamin Meyer
Reported
2009-03-27 11:14:25 PDT
launching the browser to a site that has frames the back button will be disabled. If you click on a link that loads a url in another frame the back button show now be enabled. The QWebHistory does get updated, just the action isn't updated. Patch with test included.
Attachments
path with test and changlog
(3.91 KB, patch)
2009-03-27 11:21 PDT
,
Benjamin Meyer
no flags
Details
Formatted Diff
Diff
patch to fix the bug
(4.85 KB, patch)
2009-03-31 08:44 PDT
,
Benjamin Meyer
no flags
Details
Formatted Diff
Diff
ver 3
(4.92 KB, patch)
2009-03-31 08:52 PDT
,
Benjamin Meyer
no flags
Details
Formatted Diff
Diff
ver4
(4.92 KB, patch)
2009-03-31 08:56 PDT
,
Benjamin Meyer
no flags
Details
Formatted Diff
Diff
ver5
(4.93 KB, patch)
2009-03-31 08:57 PDT
,
Benjamin Meyer
hausmann
: review+
Details
Formatted Diff
Diff
update last patch to apply to head
(4.99 KB, patch)
2009-04-15 10:50 PDT
,
Benjamin Meyer
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Meyer
Comment 1
2009-03-27 11:21:49 PDT
Created
attachment 29015
[details]
path with test and changlog
Benjamin Meyer
Comment 2
2009-03-27 11:23:07 PDT
Simon: looking at the history of this line of code it was all originally written by you in the action update commits. Can you please review this patch? Thanks.
Benjamin Meyer
Comment 3
2009-03-31 08:44:52 PDT
Created
attachment 29116
[details]
patch to fix the bug Version 2 of the patch, put the test files in a resource
Benjamin Meyer
Comment 4
2009-03-31 08:52:47 PDT
Created
attachment 29117
[details]
ver 3 put html files in the webpage dir
Benjamin Meyer
Comment 5
2009-03-31 08:56:02 PDT
Created
attachment 29118
[details]
ver4
Benjamin Meyer
Comment 6
2009-03-31 08:57:51 PDT
Created
attachment 29119
[details]
ver5
Simon Hausmann
Comment 7
2009-03-31 09:01:59 PDT
Comment on
attachment 29119
[details]
ver5 Good catch
Benjamin Meyer
Comment 8
2009-04-15 10:50:30 PDT
Created
attachment 29503
[details]
update last patch to apply to head
Eric Seidel (no email)
Comment 9
2009-04-29 14:38:25 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebKit/qt/ChangeLog M WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp A WebKit/qt/tests/qwebpage/frametest/frame_a.html A WebKit/qt/tests/qwebpage/frametest/index.html M WebKit/qt/tests/qwebpage/qwebpage.pro M WebKit/qt/tests/qwebpage/tst_qwebpage.cpp A WebKit/qt/tests/qwebpage/tst_qwebpage.qrc Committed
r43015
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug