2009-03-27  Benjamin C Meyer  <benjamin.meyer@torchmobile.com>

Reviewed by Simon Hausmann.

        Update the page actions when a finishing loading even if the frame is
        not the top frame such as when browsing inside of a website with frames.
        https://bugs.webkit.org/show_bug.cgi?id=24890

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDidFinishLoad):
        * tests/qwebpage/frametest/frame_a.html: Added.
        * tests/qwebpage/frametest/index.html: Added.
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::backActionUpdate):

Canonical link: https://commits.webkit.org/35061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43015 268f45cc-cd09-0410-ab3c-d52691b4dbfc